--- a/styles/structure.css
+++ b/styles/structure.css
@@ -19,31 +19,34 @@ main {
     flex: 1 0 auto;
     max-width: 1200px;
     width: 100%;
-    background-color: yellow;
     align-self: center;
 }
 
 
 header {
-    background-color: white;
     margin: 0;
     overflow-y: hidden;
     width: 100%;
-
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 2em, 0;
+}
+.home-link {
 
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
-
 header h1 {
-    flex: 1 1 0;
-    color: gray;
+    display: inline-block;
+    flex: 1 1 content;
+    font-size: 1em;
+    margin: 0.5em 1em 0.5em 0;
 }
 
-h1,h2.h3,h4,h5,h6 {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-footer {
-    background-color: lightgrey;
+header img {
+    flex: 0 0 content;
+    height: 1.5em;
+    margin: 0 1em;
 }
