--- a/styles/tone.css
+++ b/styles/tone.css
@@ -5,8 +5,9 @@ h1,h2.h3,h4,h5,h6 {
 }
 
 header {
-    background-color: lightgrey
+    background-color: black;
 }
+
 
 .home-link {
     text-decoration: none;
