--- a/styles/tone.css
+++ b/styles/tone.css
@@ -1,4 +1,6 @@
-
+body {
+    margin: 0px;
+}
 
 h1,h2.h3,h4,h5,h6 {
     font-family: Arial, Helvetica, sans-serif;
@@ -6,6 +8,7 @@ h1,h2.h3,h4,h5,h6 {
 
 header {
     background-color: black;
+    height: 100vh;
 }
 
 
