--- a/styles/structure.css
+++ b/styles/structure.css
@@ -38,13 +38,10 @@ header {
     flex-direction: row;
     align-items: center;
 }
-header h1 {
+header h1,header h2 {
     display: inline-block;
-    flex: 1 1 content;
-    font-size: 1em;
-    margin: 0.5em 1em 0.5em 0;
+    margin: 0;
 }
-
 header img {
     flex: 0 0 content;
     height: 1.5em;
