--- a/styles/tone.css
+++ b/styles/tone.css
@@ -1,17 +1,18 @@
 
 
-h1,h2.h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
     background-color: black;
+    font-size: 2
 }
 
 
 .home-link {
     text-decoration: none;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 header h2 {
