--- a/styles/structure.css
+++ b/styles/structure.css
@@ -25,10 +25,10 @@ main {
 
 header {
     margin: 0;
-    overflow-y: hidden;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 2em, 0;
+}
+
+video.intro {
+    background-color: white;
+    height: 100%;
 }
