--- a/styles/tone.css
+++ b/styles/tone.css
@@ -9,13 +9,7 @@ h1,h2,h3,h4,h5,h6 {
 header {
     background-color: black;
     height: 100vh;
-    font-size: 2
-}
-
-
-.home-link {
-    text-decoration: none;
-    font-size: 1.5em;
+    font-size: 2;
 }
 
 header h2 {
