--- a/styles/structure.css
+++ b/styles/structure.css
@@ -25,10 +25,14 @@ main {
 
 header {
     margin: 0;
+    padding: 0;
     width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 video.intro {
-    background-color: white;
     height: 100%;
 }
