--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -49,6 +49,17 @@
   }
 }
 
+.navspace > .img {
+  border-color: transparent !important;
+}
+
+.navbar {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+}
+
 .navspace {
   height: 30px;
   margin: auto;
@@ -67,7 +78,7 @@
 
 .navspace>a {
   float: left;
-  color: black;
+  color: white;
   text-align: center;
   padding: 5px 16px;
   text-decoration: none;
@@ -90,7 +101,7 @@
   font-size: 20px;
   border: none;
   outline: none;
-  color: black;
+  color: white;
   padding: 5px 16px;
   background-color: inherit;
   font-family: inherit;
