--- a/styles/structure.css
+++ b/styles/structure.css
@@ -27,12 +27,19 @@ header {
     margin: 0;
     padding: 0;
     width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 video.intro {
     height: 100%;
+}
+
+.header-content-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    justify-content: center;
 }
