--- a/styles/structure.css
+++ b/styles/structure.css
@@ -9,30 +9,25 @@ body {
     flex-direction: column;
 }
 
-.header,footer {
+header,footer {
     flex: 0 0 auto;
     max-width: 100%;
 }
 
 main {
     flex: 1 0 auto;
-    width: 100vw;
+    width: 100%;
     align-self: center;
 }
 
 
-.header {
-    margin-bottom: -.5vh;
+header {
     padding: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
-video.intro {
-    width: 100vw;
-    height: auto;
-    margin: auto;
-}
+
 
 .header-content-wrapper {
     position: absolute;
