--- a/styles/tone.css
+++ b/styles/tone.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Titillium Web', Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -29,10 +29,10 @@ header {
 header h1, header h2 {
     color: white;
     letter-spacing: 0.2em;
-    font-weight: lighter;
+    font-weight: 300;
     background-color: #20202060;
     margin: 0.2em;
-    padding: 0.3em 0.5em;
+    padding: 0.25em 0.5em;
     border-radius: 0.5em;
     animation: item-entrance 2s ease-out;
     opacity: 1;
