--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -1,7 +1,6 @@
 @media only screen and (min-width: 864px) {
 
   .links {
-    height: 50px;
     margin-bottom: 10px;
   }
 
@@ -58,35 +57,36 @@
 }
 
 .navbar {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .navspace {
-  height: 30px;
+  height: 100%;
   margin: auto;
-  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .links {
   overflow: hidden;
   width: 100%;
-  font-size: 20px;
+  font-size: 1.2em;
   display: flex;
   justify-content: space-around;
+  align-content: center;
   font-family: 'Raleway', sans-serif;
-  height: fit-content;
+  margin: 0.5em 0;
 }
 
 .navspace>a {
   float: left;
   color: white;
   text-align: center;
-  padding: 5px 16px;
+  padding: 0.2em 0.6em;
   text-decoration: none;
-  height: 20px;
+  height: 1em;
   border-bottom: 0px solid white;
   transition: .2s;
 }
@@ -102,11 +102,11 @@
 }
 
 .dropdown .dropbtn {
-  font-size: 20px;
+  font-size: 1em;
   border: none;
   outline: none;
   color: white;
-  padding: 5px 16px;
+  padding: 0.2em 0.6em;
   background-color: inherit;
   font-family: inherit;
   margin: -10px 0px;
