--- a/styles/structure.css
+++ b/styles/structure.css
@@ -4,27 +4,21 @@ html, body {
     height: 100%;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 header,footer {
-    flex: 0 0 auto;
     max-width: 100%;
 }
 
+
 main {
-    flex: 1 0 auto;
     width: 100%;
-    align-self: center;
+    height: 200%;
 }
 
 
 header {
+    height: 100vh;
     padding: 0;
     width: 100%;
-    height: 100%;
 }
 
 
@@ -39,4 +33,11 @@ header {
     overflow: hidden;
     justify-content: center;
     text-align: center;
+}
+
+nav {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    width: 100%;
 }
