--- a/styles/tone.css
+++ b/styles/tone.css
@@ -9,7 +9,6 @@ h1,h2,h3,h4,h5,h6 {
 
 header {
     background-color: black;
-    height: 100%;
     font-size: 2em;
 }
 
@@ -40,4 +39,8 @@ header h1, header h2 {
 
 footer {
     background-color: lightgrey;
+}
+
+.navbar {
+    background-color: black;
 }
