--- a/styles/structure.css
+++ b/styles/structure.css
@@ -1,7 +1,6 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 header,footer {
@@ -11,7 +10,7 @@ header,footer {
 
 main {
     width: 100%;
-    height: 200%;
+    height: 200vh;
 }
 
 
@@ -40,4 +39,5 @@ nav {
     position: -webkit-sticky;
     top: 0;
     width: 100%;
+    height: 3em;
 }
