--- a/styles/tone.css
+++ b/styles/tone.css
@@ -49,6 +49,7 @@ nav {
     background-color: black;
     color: white;
     font-family: 'Raleway', sans-serif;
+    font-size: 1.2em;
 }
 
 nav a {
