--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 800px) {
   nav>.content .navgroup {
     display: flex;
     height: 100%;
@@ -21,14 +21,20 @@
   nav>.content .groupcontent a:hover {
     border-bottom: 0.2em solid;
   }
+
+
+  nav>.content .navgroup.primary>.groupcontent {
+    justify-content: end;
+  }
+
 }
 
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
 
   nav>.content {
     width: 100%;
-    justify-items: right;
+    
   }
 
 
@@ -49,7 +55,7 @@
     background-color: #EEEEEE;
     text-align: left;
     border-radius: 0 0 0.3em 0.3em;
-    align-self: flex-start;
+    align-self: flex-end;
     transform: translateY(4em);
     opacity: 0;
     transition: all 0.3s;
@@ -76,13 +82,33 @@
   nav>.content .groupcontent a:hover {
     color: #525252;
   }
+
+  nav>.content .navgroup.primary>.grouplabel {
+    justify-content: end;
+  }
+
 }
 
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 nav>.content {
   height: 100%;
-  width: 100%;
+  flex: 1 0;
+  max-width: 1100px;
+  margin: 0 2em;
   text-align: center;
+  justify-content: stretch;
+  flex-direction: row;
+}
+
+
+
+nav>.content .navgroup.primary {
+  flex: 1 0;
 }
 
 nav>.content, nav>.content .groupcontent {
