--- a/styles/structure.css
+++ b/styles/structure.css
@@ -41,3 +41,14 @@ nav {
     width: 100%;
     height: 3em;
 }
+
+footer {
+    padding: 0.5em 3em;
+}
+
+footer>.content {
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: left;
+    justify-items: left;
+}
