--- a/styles/tone.css
+++ b/styles/tone.css
@@ -39,11 +39,13 @@ header h1, header h2 {
 
 footer {
     background-color: lightgrey;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 0.8em;
 }
 
 
 nav {
-    background-color: black;
+    background-color: #222222;
     color: white;
     font-family: 'Raleway', sans-serif;
     font-size: 1.2em;
