--- a/styles/structure.css
+++ b/styles/structure.css
@@ -9,6 +9,9 @@ header,footer {
 
 main {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 main, footer>.content {
@@ -42,6 +45,12 @@ nav {
     top: 0;
     width: 100%;
     height: 3em;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 footer>.content {
