--- a/styles/content.css
+++ b/styles/content.css
@@ -2,7 +2,7 @@
 
 
 main .contentcard {
-    border-radius: 1.6em;
+    border-radius: 0.8em;
     overflow-y: hidden;
     padding: 0 1.5em;
     margin: 1.1em;
@@ -52,6 +52,7 @@ main .contentcard.image {
 }
 main .contentcard.image img {
     margin: 1.5em;
+    border-radius: 0.3em;
 }
 
 @media (max-width: 800px) {
@@ -89,4 +90,7 @@ iframe.calendar {
     padding: 0.5em;
     margin: 0 auto;
     display: block;
+    width: 100%;
+    height: 600px;
+    max-width: 800px;
 }
