--- a/styles/structure.css
+++ b/styles/structure.css
@@ -19,12 +19,12 @@ main, footer>.content {
 
 
 header {
-    height: 100vh;
+    height: 75vh;
     padding: 0;
     width: 100%;
 }
 
-.header-content-wrapper {
+header .header-content-wrapper {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -36,10 +36,13 @@ header {
     text-align: center;
 }
 
+
+
 nav {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    z-index: 1;
     width: 100%;
     height: 3em;
 }
