--- a/styles/content.css
+++ b/styles/content.css
@@ -8,7 +8,7 @@ main .contentcard {
     margin: 1.1em;
     box-shadow: 0 0 1em 0.1em #00000033;
     transition: all 0.2s;
-    background-color: white;
+    background-color: #fdfdff;
 }
 
 main .contentcard p {
@@ -36,7 +36,7 @@ main .splitcontainer>div {
 
 
 main .contentcard.focus {
-    background-color: #fffffd;
+    background-color: white;
 }
 
 main .contentcard.full {
