--- a/styles/content.css
+++ b/styles/content.css
@@ -71,6 +71,7 @@ main .contentcard.image .caption {
 main a {
     color: #1F3A92;
     
+    background-color: inherit;
     transition: all 0.3s;
 }
 
@@ -86,11 +87,21 @@ main a.button {
     border-radius: 0.4em;
     float: right;
     margin: 1.5em 0;
+    background-color: white;
 }
 
+main a.button:hover {
+    background-color: #fafafa;
+}
 
 table {
-    margin: 1.5em
+    margin: 1.5em;
+}
+
+@media (max-width: 799px) {
+    table {
+        font-size: 0.5em;
+    }
 }
 
 td, th {
