Added info on video source

--- a/styles/structure.css
+++ b/styles/structure.css
@@ -40,7 +40,11 @@ header .header-content-wrapper {
     text-align: center;
 }
 
-
+header .header-content-wrapper .caption {
+    position: absolute;
+    right: 1em;
+    bottom: 1em;
+}
 
 nav {
     position: sticky;
