--- a/styles/tone.css
+++ b/styles/tone.css
@@ -38,7 +38,7 @@ header {
 }
 
 
-header h1, header h2 {
+header h1, header h2, header span.caption {
     color: white;
     letter-spacing: 0.2em;
     font-weight: 300;
@@ -48,6 +48,20 @@ header h1, header h2 {
     border-radius: 0.5em;
     animation: item-entrance 2s ease-out;
     opacity: 1;
+}
+
+header span.caption {
+    font-size: 0.5em;
+    font-family: 'Raleway', sans-serif;
+    color: white;
+}
+
+header span.caption a {
+    color: white;
+    transition: color 0.5s;
+}
+header span.caption a:hover {
+    color: lightgray;
 }
 
 footer {
